# ppt-automation

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  main.py  pptppt.ipynb  pptschema.json  pyproject.toml  requirements.txt
output/: empty_template.pptx  final_presentation.pptx
src/: __init__.py  config.py  content_inserter.py  image_handler.py  json_parser.py  models.py  orchestrator.py  pipeline.py  planner.py  ppt_maker.py  prompts.py  slot_fetcher.py  worker.py
